--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -11,7 +11,7 @@ jobs:
       uses: docker/login-action@v2
       with:
         registry: ghcr.io
-        username: "miguelmerlin"
+        username: miguelmerlin
         password: ${{ secrets.GITHUB_TOKEN }}
     - name: Build and Push Docker Image
       uses: docker/build-push-action@v4
